# sichercalc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
ast_calculator/: __init__.py  main.py  node_interpreter.py  op_logic.py
examples/: basics.py  calculator.py  custom_context.py
sichercalc/: __init__.py  exceptions.py  finals.py  main.py  node_interpreter.py  op_logic.py
