[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sichercalc"
description = "A lightweight AST based expression evaluator"
version = "0.0.1.dev1"
license = "MIT"
requires-python = ">= 3.10"
keywords=["ast"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
]
authors = [
  {name = "Orly Neto", email = "orly2carvalhoneto@gmail.com"}
]
maintainers = [
  {name = "Orly Neto", email = "orly2carvalhoneto@gmail.com"}
]
dynamic = ["readme"]

[project.urls]
Repository = "https://github.com/Stalot/sichercalc"
Issues = "https://github.com/Stalot/sichercalc/issues"
Changelog = "https://github.com/Stalot/sichercalc/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["sichercalc*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}